--- a/08.Rmd
+++ b/08.Rmd
@@ -8,17 +8,17 @@
 
 ## 서론
 
-In vitro, in vivo 데이터로 사람에서의 PK, PD를 예측한다는 것은 데이터를 translation하는 것이로서 방법론에 관해서는 이후 출간될 책에서 자세히 다룰 예정이므로 이 장에서는 간략히 개념을 소개한다. 
+In vitro, in vivo 데이터로 사람에서의 PK, PD를 예측한다는 것은 데이터를 translation하는 것으로서 방법론에 관해서는 이후 출간될 책에서 자세히 다룰 예정이므로 이 장에서는 간략히 개념을 소개한다. 
 In vitro ADME 실험을 하는 목적은 결국 사람의 약동학을 파악하기 위함인데 사람의 약동학을 파악하기 위해서이다. 
-약동학을 아주 단순히 표현하자면 시간에 따라 혈장 약물 농도가 변화하는 것인데 외부에서 정해주는 투여용량과 채혈시간 이외의 CL, Vd, ka, F 이 네 가지의 약동학 파라미터들에 의해 정해진다. 
+약동학을 단순히 표현하자면 시간에 따라 혈장 약물 농도가 변화하는 것인데 외부에서 정해주는 투여용량과 채혈시간 이외의 CL, Vd, ka, F 이 네 가지의 약동학 파라미터들에 의해 정해진다. 
 즉 이 네 가지 파라미터들의 사람에서의 값을 알면 약동학을 추정할 수 있고, in vitro ADME 연구를 하는 목적은 이들을 가능한 한 정확하게 추정하기 위한 목적이다. 
 In vitro실험을 잘 수행하는 것과 그 결과를 제대로 해석하는 것은 다른 일이며 좋은 데이터를 얻었다 해도 잘 못 해석하거나 실험방법의 한계점 등에 대한 고려가 없이 추정하면 안된다. 
-경우에 따라서는 3종 이상의 동물에서 얻어진 in vivo PK 파라미터를 allometry수식에 넣어 사람의 PK 파라미터를 추정하는 방법을 쓸 수도 있는데 언제 in vitro 방법을 쓰고 언제 in vivo 방법을 써야할지를 단정적으로 구분할 수는 없으며 데이터의 특징을 살펴보며 결정해야 한다. 
+경우에 따라서는 3종 이상의 동물에서 얻어진 in vivo PK 파라미터를 allometry 수식에 넣어 사람의 PK 파라미터를 추정하는 방법을 쓸 수도 있는데 언제 in vitro 방법을 쓰고 언제 in vivo 방법을 써야할지를 단정적으로 구분할 수는 없으며 데이터의 특징을 살펴보며 결정해야 한다. 
 약물 분자의 성격에 따라 사람에서 어느 PK 파라미터는 대략 어떤 방법으로 추정하는 것이 조금 낫다는 정도는 알려져 있지만 획일적으로 적용하는 것은 바람직하지 않다.
 
 In vitro ADME 실험의 또다른 목적이라 할 수 있는 것으로 약물-약물 상호작용 (drug-drug interaction, DDI)의 예측이 있다. 
-물론 이는 사람의 약동학을 예측하는 작업과 상당부분 겹치지만, 특히 내가 약으로 개발하고자 하는 물질이 병용하는 약물의 PK에 영향을 미칠지, 그 반대로 영향을 받을지 여부를 미리 알아보기 위해 하는 것인데 in vitro 실험데이터를 바탕으로 정교한 PBPK 소프트웨어를 이용하여 예측을 시행한다. 
-이런 예측이 중요한 것은 개발과정에서 관청이 부과하는 사람에서의 DDI 임상시험들의 일부 또는 상당 부분을 타당한 예측과정을 통해 구한 값들로 면제받을 수 있기 때문이다.
+물론 이는 사람의 약동학을 예측하는 작업과 상당부분 겹치지만, 특히 약으로 개발하고자 하는 물질이 병용하는 약물의 PK에 영향을 미칠지, 그 반대로 영향을 받을지 여부를 미리 알아보기 위해 하는 것인데 in vitro 실험데이터를 바탕으로 정교한 PBPK 소프트웨어를 이용하여 예측을 시행한다. 
+이런 예측이 중요한 것은 개발과정에서 허가기관이 요구할 수 있는 사람에서의 DDI 임상시험 자료들의 상당 부분을 타당한 예측과정을 통해 구한 값들로 면제받을 수 있기 때문이다.
 
 본 장에 나오는 내용들은 교육논문(tutorial)으로 3차에 걸쳐 게재된 것을 바탕으로 작성되었으며 더 자세한 내용을 알기 위해 이 논문들을 참조할 수 있다.
 
@@ -55,7 +55,7 @@ knitr::include_graphics('media-08/image1-2.jpg')
 
 (ref:08-01) Caco-2 투과도와 human jejunal permeability, F~a~의 연관성 실험 자료들 [@sun2002comparison]
 
-이 외에도 polar surface area (PSA)와 Fa의 반비례하는 경향을 이용하여 추정하는 수식이 알려져 있으나 수식을 만드는데 쓰인 약물 분자들의 종류가 많지 않고 필자와 동료들이 다른 자료들을 수집하여 PSA와 Fa의 관계식을 검증해 본 결과 잘 맞지 않는 것으로 나타났으므로 (unpublished data) 우리는 이 방법을 권하지 않는다.
+이 외에도 polar surface area (PSA)와 F~a~의 반비례하는 경향을 이용하여 추정하는 수식이 알려져 있으나 수식을 만드는데 쓰인 약물 분자들의 종류가 많지 않고 필자와 동료들이 다른 자료들을 수집하여 PSA와 F~a~의 관계식을 검증해 본 결과 잘 맞지 않는 것으로 나타났으므로 (unpublished data) 우리는 이 방법을 권하지 않는다.
 
 ### F~g~의 추정
 
@@ -104,7 +104,7 @@ F~h~를 추정하기 위해서는 CL~h~를 추정하는 것이 먼저이다. 관
 ### PBPK 방법
 
 약물의 분포는 많은 경우 물리화학적 특성에 의해 결정된다. 즉 얼마나
-친수성/소수성인가, 분자량이 얼마나 되는지 등이 좌우하되 이외에도
+친수성/소수성인가, 분자량이 얼마나 되는지 등이 좌우하되 이밖에도
 특정장기나 조직으로의 분포에는 약물수송체의 기질 여부가 영향을 미치기도
 한다. 가장 기본적인 접근방법은 조직분배계수(k~tp~)를 지방조직과 이외의
 조직들에서 추정하는 것인데 약물의 지용성, 각 장기별 중성지방과 인지질의
@@ -189,13 +189,11 @@ itraconazole 등)에 대해서도 똑같이 PBPK 소프트웨어로 예측하여
 이 장에 소개된 in vitro 실험결과의 해석에 있어 약물의 혈장단백질에 대한
 비결합분율 f~u~은 거의 모든 곳에 쓰이고 약효농도의 예측에 있어서도
 기본이 되는 측정값이다. 그러나 혈장단백 결합의 측정은 실험실에 따라 많은
-편차가 있으며 결합률이 높은 약의 경우 99.9% 이상으로 측정되는
-
-경우도 많아서(즉, f~u~는 0.1% 미만) FDA의 각종 가이던스들에서는 이 경우
+편차가 있으며 결합률이 높은 약의 경우 99.9% 이상으로 측정되는 경우도 많아서(즉, f~u~는 0.1% 미만) FDA의 각종 가이던스들에서는 이 경우
 f~u~를 0.1%로 간주하고 계산하고 있다.
 
 특히 in vitro에서 측정하는 약효에 관한 실험에서 약물이 실험계 내의
-단백질이나 실험기구표면에 결합하는 현상이나 기타 비특이적인 결합 등을
+단백질이나 실험기구 표면에 결합하는 현상이나 기타 비특이적인 결합 등을
 무시하고 f~u~ = 1로 간주하고 해석하는 경우가 대부분이다. 사람에서 약효가
 나타나려면 free drug hypothesis에 근거하여 항정상태에서 혈장
 비결합농도(C~u,ss~)가 in vitro 실험에서 얻어지는 타겟에 대한 IC~50~,
