--- a/06.Rmd
+++ b/06.Rmd
@@ -13,14 +13,26 @@ opts_chunk$set(echo=FALSE)
 
 ## 서론
 
-대사 유도란 주로 약이나 화학물질에 의해서 효소의 대사 능력이 증가하는 현상을 말한다. 특히 약동학적 약물상호작용 측면에서는 이러한 대사 유도의 양이 많아져서 기질의 청소율이 증가하는 것을 의미한다.
-따라서 유도체(inducer)란 특정 효소를 이러한 방식으로 유도할 수 있는 능력이 있는 물질을 말한다. 
-유도체에 의해 대사 효소가 증가하게 되면 이에 따라 기질의 청소율이 증가하게 되며 이는 기질의 인체에서의 노출 감소 또는 기질의 대사체의 노출 증가를 일으키며 이로 인해 약의 효능과 안전성 모두 영향을 미칠 수 있다.
-대사 유도에 의한 영향은 capacity가 낮은 CYP isoform에서 특히 더 나타나게 된다. CYP isoform이 아닌 효소에서도 유도 현상이 나타날 수 있으나 이러한 효소들은 대부분 친화도(affinity)가 낮고 capacity가 높기 때문에 기질의 청소율에 큰 영향을 미치는 경우는 드물다. 
-유도체는 대사효소의 생성 속도를 증가시키거나 대사 효소의 안정화를 통해 반감기를 감소시켜 대사 효소의 숫자를 증가시킨다. 
-종간 차이가 크며 이러한 효소양의 변화는 시간에 따라 변화하며 생성속도 혹은 감소속도를 변화시키기 때문에 유도 효과가 나타나기 까지는 비교적 다른 약물상호작용에 비해 긴 시간이 걸리며 (7~10일) 특히 복용을 멈춰도 이러한 현상은 당분간은 유지된다. CYP isoform의 경우는 이러한 청소율의 변화가 매우 크게 나타날 수 있다. 
+이 장에서는 개발하는 약물이 대사 유도제 (Inducer)로써 작용할 가능성을 확인하고, 해당 유도 수준을 평가하는 다양한 방법을 살펴보기로 한다.
+대사 유도(Metabolic induction)란 주로 약이나 화학물질에 의해서 효소의 활성 수준이 증가하여 대사 능력이 증가하는 현상을 말하며,
+약동학적 약물상호작용 측면에서는 대사 효소의 양이 많아져서 기질의 청소율이 증가하는 것을 의미한다.
+유도체(inducer)란 이러한 방식으로 특성 효소를 유도할 수 있는 능력이 있는 물질을 의미하며, 이는 즉 다른 약물의 노출 수준에 영향을 줄 수 있기
+때문에 약물 개발에 있어서 개발하고 있는 후보 물질이 이러한 유도제로써의 가능성이 있는지를 평가하는 것은 매우 중요하다.
+특히 유도제는 다른 약물 상호작용에 비해 최대 효과가 나타나는 대에 긴 시간이 걸리며, 약물을 중단한 후에도 당분간 유지되는 특성이 있어
+약물 개발에 있어서는 후보 물질이 유도제 가능성이 있는 것은 선호되지 않는 특성이며 반드시 확인해야 되는 사항이다.  
+대사 억제와는 다르게 유도제에 대한 정량적 평가는 매우 어렵기 때문에 대부분의 경우 후보 물질의 유도제로써의 가능성을 평가하는 것이 주된 목적이며,
+이를 위한 다양한 induction assay 및 실험들을 수행하여 적절한 파라미터를 얻고 평가한다.
+이 장에서는 후보 물질의 유도제로써의 가능성을 평가하는 방법과 평가 결과를 해석하는 방법에 대해서 살펴보기로 한다.
 
-유도 현상의 대표적인 예는 알코올 중독 환자의 아세트아미노펜 복용, 항간질약과 
+<!-- 대사 유도에 의한 영향은 capacity가 낮은 CYP isoform에서 특히 더 나타나게 된다. 
+CYP isoform이 아닌 효소에서도 유도 현상이 나타날 수 있으나 이러한 효소들은 대부분 친화도(affinity)가 낮고 
+capacity가 높기 때문에 기질의 청소율에 큰 영향을 미치는 경우는 드물다. 
+유도체는 대사효소의 생성 속도를 증가시키거나 대사 효소의 안정화를 통해 반감기를 감소시켜 대사 효소의 숫자를 증가시킨다. 
+종간 차이가 크며 이러한 효소양의 변화는 시간에 따라 변화하며 생성속도 혹은 감소속도를 변화시키기 때문에 유도 효과가 
+나타나기 까지는 비교적 다른 약물상호작용에 비해 긴 시간이 걸리며 (7~10일) 특히 복용을 멈춰도 이러한 현상은 당분간은 유지된다.
+CYP isoform의 경우는 이러한 청소율의 변화가 매우 크게 나타날 수 있다. 
+
+유도 현상의 대표적인 예는 알코올 중독 환자의 아세트아미노펜 복용, 항간질약과  -->
 
 ## 유도체의 작용 메커니즘
 
@@ -30,8 +42,11 @@ knitr::include_graphics('media-induction/mechanism.png')
 (ref:mechanism) 유도체의 작용 메커니즘
 
 
-일반적으로 유도체는 위 그림\@ref(fig:mechanism)과 같이 Nucleus의 Receptor와의 결합을 통해 유전자의 전사를 유도하여 효소의 생성을 증가 시킨다. 
+일반적으로 유도체는 위 그림\@ref(fig:mechanism)과 같이 Nucleus의 Receptor와의 결합을 통해 유전자의 전사를 유도하여 
+효소의 생성을 증가 시킨다. 
 작용 메커니즘은 비슷하나 CYP isoform에 따라서 크게 3가지의 Nucleus receptor가 관여하게 된다.
+
+
 
 | 유도 메커니즘   | CYP isoform    | 특징       |   
 |-----------|-----------|-------------|
@@ -88,4 +103,32 @@ knitr::include_graphics('media-07/turnover.png')
 유도체의 경우 주로 3일 이상 관찰하며 사용하는 농도는 약물의 용해도, 간세포에 대한 독성과 약동학 정보를 고려하여 결정한게 된다. 특히    예측되는 인체 내 최대 노출 정도 (C~max,u~)에 대한 30~50배 값을 이용하게 된다. 유도체에 대한 시험이 끝나면 세포 독성을 확인하게 되며 만약 3일 이상 세포가 살아있지 않으면 관찰 기간을 축소하거나 조금 더 낮은 농도를 사용하게 된다. 
 집단내에서 CYP발현 정도와 반감기 등은 사람간 차이가 있기 때문에 유도 결과 역시 donor에 따라 다르게 나타날 수 있으며 assay environment에 따라도 다르게 나타난다.  
 
+1. Enzyme
+2. mRNA
+3. Enzyme activity
+4. Reporter gene assay
 
++------------+--------+--------+--------+--------+--------+--------+
+|            | **G1** | **G2** | **G3** | **G4** | **G5** | **G6** |
++============+========+========+========+========+========+========+
+| Buffer     | O      | O      | O      | O      | O      | O      |
++------------+--------+--------+--------+--------+--------+--------+
+| Microsomes | X      | O      | O      | O      | O      | O      |
++------------+--------+--------+--------+--------+--------+--------+
+| NADPH      | X      | X      | O      | X      | O      | O      |
++------------+--------+--------+--------+--------+--------+--------+
+| UDPGA      | X      | X      | X      | O      | X      | X      |
+| (+ala-     |        |        |        |        |        |        |
+| methicin)  |        |        |        |        |        |        |
++------------+--------+--------+--------+--------+--------+--------+
+| SKF525A    | \-     | \-     | \-     | \-     | \-     | O      |
++------------+--------+--------+--------+--------+--------+--------+
+| Pre-       | 37℃,   | 37℃,   | 37℃,   | Ice,   | 45℃,   | 37℃,   |
+| incubation |        |        |        |        |        |        |
+|            | 5 min  | 5 min  | 5 min  | 30 min | 30 min | 5 min  |
++------------+--------+--------+--------+--------+--------+--------+
+| 평가가능한 | X      | ES,    | ES,    | ES,    | ES,    | ES,    |
+| 대사효소   |        | CES    | CES,   | CES,   | CES,   | CES,   |
+|            |        |        | CYP,   | UGT    | CYP    | FMO    |
+|            |        |        | FMO    |        |        |        |
++------------+--------+--------+--------+--------+--------+--------+
